--- a/index.html
+++ b/index.html
@@ -4,260 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draw a Connection</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        }
-
-        body {
-            line-height: 1.5;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        /* Header Styles */
-        header {
-            border-bottom: 1px solid #eee;
-            padding: 1rem 0;
-        }
-
-        .header-content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: #333;
-        }
-
-        /* Hero Section */
-        .hero {
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-        }
-
-        .hero p {
-            color: #666;
-            margin-bottom: 2rem;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-        }
-
-        .button {
-            padding: 0.75rem 1.5rem;
-            border-radius: 0.5rem;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .button-primary {
-            background-color: #000;
-            color: white;
-        }
-
-        .button-secondary {
-            border: 1px solid #000;
-            color: #000;
-        }
-
-        /* Get Started Section */
-        .get-started {
-            background-color: #f8f9fa;
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .steps-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-top: 3rem;
-        }
-
-        .step-card {
-            background: white;
-            padding: 2rem;
-            border-radius: 1rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .step-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            margin-bottom: 1rem;
-            background: #f0f0f0;
-        }
-
-        /* How It Works */
-        .how-it-works {
-            padding: 4rem 0;
-        }
-
-        .feature-card {
-            background: #f8f9fa;
-            padding: 2rem;
-            border-radius: 1rem;
-            margin-top: 2rem;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 2rem;
-        }
-
-        /* Testimonials */
-        .testimonials {
-            padding: 4rem 0;
-        }
-
-        .testimonials-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            margin-top: 2rem;
-        }
-
-        .testimonial-card {
-            background: #f8f9fa;
-            padding: 2rem;
-            border-radius: 1rem;
-        }
-
-        /* FAQ Section */
-        .faq {
-            background-color: #f8f9fa;
-            padding: 4rem 0;
-        }
-
-        .faq-item {
-            margin-bottom: 1rem;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 1rem;
-        }
-
-        .faq-question {
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-
-        /* Newsletter */
-        .newsletter {
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .newsletter-form {
-            max-width: 500px;
-            margin: 2rem auto 0;
-            display: flex;
-            gap: 1rem;
-        }
-
-        .newsletter-form input {
-            flex: 1;
-            padding: 0.75rem;
-            border: 1px solid #ddd;
-            border-radius: 0.5rem;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #f8f9fa;
-            padding: 4rem 0;
-            border-top: 1px solid #eee;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 2rem;
-        }
-
-        .footer-column h3 {
-            margin-bottom: 1rem;
-        }
-
-        .footer-column ul {
-            list-style: none;
-        }
-
-        .footer-column ul li {
-            margin-bottom: 0.5rem;
-        }
-
-        .copyright {
-            text-align: center;
-            margin-top: 3rem;
-            padding-top: 2rem;
-            border-top: 1px solid #eee;
-        }
-
-        /* Mobile Responsiveness */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            .feature-card {
-                grid-template-columns: 1fr;
-            }
-
-            .button-group {
-                flex-direction: column;
-            }
-
-            .newsletter-form {
-                flex-direction: column;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container header-content">
-            <div class="logo">Logo</div>
-            <nav class="nav-links">
-                <a href="#">About</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
+    <header class="container">
+        <div class="logo">drawmeet</div>
+        <button class="menu-toggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <div class="nav-container">
+            <nav>
+                <a href="#about">About</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact">Contact</a>
             </nav>
-            <div class="button-group">
-                <a href="#" class="button button-secondary">Log in</a>
-                <a href="#" class="button button-primary">Sign up</a>
+            <div class="header-buttons">
+                <a href="#login" class="btn btn-secondary">Log in</a>
+                <a href="#signup" class="btn btn-primary">Sign up</a>
             </div>
         </div>
     </header>
 
-    <section class="hero">
-        <div class="container">
+    <section class="hero container">
+        <div class="left">
             <h1>draw a connection</h1>
             <p>bringing hearts closer, one sketch at a time</p>
-            <div class="button-group">
-                <a href="#" class="button button-primary">Join</a>
-                <a href="#" class="button button-secondary">Discover</a>
-            </div>
+            <a href="#join" class="btn btn-primary">Join</a>
+            <a href="#discover" class="btn btn-secondary">Discover</a>
+        </div>
+        <div class="right">
+            <img id="hero_img" src="assets/hero.png" alt="Hero Image">
         </div>
     </section>
 
@@ -265,19 +43,19 @@
         <div class="container">
             <h2>get started with drawmeet</h2>
             <p>simply download our app and create a profile. it's quick and easy!</p>
-            <div class="steps-grid">
-                <div class="step-card">
-                    <img src="placeholder.jpg" alt="Download app">
+            <div class="steps">
+                <div class="step">
+                    <div class="step-img"></div>
                     <h3>Download the app</h3>
                     <p>Get our app from your preferred app store and create your profile</p>
                 </div>
-                <div class="step-card">
-                    <img src="placeholder.jpg" alt="Create profile">
+                <div class="step">
+                    <div class="step-img"></div>
                     <h3>Create your profile</h3>
                     <p>Share key details about yourself and what you're looking for</p>
                 </div>
-                <div class="step-card">
-                    <img src="placeholder.jpg" alt="Start swiping">
+                <div class="step">
+                    <div class="step-img"></div>
                     <h3>Start swiping</h3>
                     <p>Browse through profiles and find your perfect match</p>
                 </div>
@@ -285,97 +63,136 @@
         </div>
     </section>
 
-    <section class="how-it-works">
-        <div class="container">
-            <h2>how it works</h2>
-            <div class="feature-card">
-                <div>
-                    <h3>swipe and match</h3>
-                    <p>With our app, you can easily swipe through profiles and select your potential matches. Find someone who catches your eye and spark your interest.</p>
-                </div>
-                <div class="feature-image">
-                    <img src="placeholder.jpg" alt="Swipe and match feature">
-                </div>
+    <section class="how-it-works container">
+        <h2>how it works</h2>
+        <div class="feature">
+            <div class="feature-content">
+                <h3>swipe and match</h3>
+                <p>With our app, you can easily swipe through profiles and select your potential matches. Find someone who catches your eye and spark your interest.</p>
             </div>
+            <div class="feature-img"></div>
         </div>
     </section>
 
-    <section class="testimonials">
-        <div class="container">
-            <h2>happy users</h2>
-            <div class="testimonials-grid">
-                <div class="testimonial-card">
-                    <div class="user-info">
-                        <img src="placeholder.jpg" alt="User avatar" style="width: 50px; height: 50px; border-radius: 50%;">
-                        <div>
-                            <h4>User Name</h4>
-                            <p>Location</p>
-                        </div>
+    <section class="find-match">
+        <div class="container match-content">
+            <div class="match-img"></div>
+            <div class="match-steps">
+                <h2>find your match</h2>
+                <div class="match-step">
+                    <div class="match-step-icon"></div>
+                    <div>
+                        <h3>effortless connections</h3>
+                        <p>Swipe right on those whose art speaks to your soul</p>
                     </div>
-                    <p>"The best dating app on the app. It's amazing!"</p>
                 </div>
-                <!-- Repeat testimonial-card 2 more times -->
+                <div class="match-step">
+                    <div class="match-step-icon"></div>
+                    <div>
+                        <h3>find your match</h3>
+                        <p>Discover potential matches who share your creative vision</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="faq">
-        <div class="container">
-            <h2>faqs</h2>
-            <div class="faq-item">
-                <div class="faq-question">How does it work?</div>
-                <div class="faq-answer">Our app allows you to easily browse profiles and connect with potential matches through creative expression.</div>
+    <section class="testimonials container">
+        <h2>happy users</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <div class="testimonial-img"></div>
+                    <div>
+                        <h3>User Name</h3>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <p>"The best dating app on the app. It's amazing!"</p>
             </div>
-            <!-- Add more FAQ items -->
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <div class="testimonial-img"></div>
+                    <div>
+                        <h3>User Name</h3>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <p>"The best dating app on the app. It's amazing!"</p>
+            </div>
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <div class="testimonial-img"></div>
+                    <div>
+                        <h3>User Name</h3>
+                        <p>Location</p>
+                    </div>
+                </div>
+                <p>"The best dating app on the app. It's amazing!"</p>
+            </div>
         </div>
     </section>
 
-    <section class="newsletter">
-        <div class="container">
-            <h2>get early access today!</h2>
-            <p>be the first to experience our exciting new features and updates</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Enter your email">
-                <button type="submit" class="button button-primary">Subscribe</button>
-            </form>
+    <section class="faq container">
+        <h2>faqs</h2>
+        <div class="faq-item">
+            <div class="faq-question">How does it work?</div>
+            <div class="faq-answer">Our app allows you to easily browse profiles and connect with potential matches through creative expression.</div>
         </div>
+        <div class="faq-item">
+            <div class="faq-question">Is it safe?</div>
+            <div class="faq-answer">We take your safety seriously and have implemented robust security measures to protect our users.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">How do I get started?</div>
+            <div class="faq-answer">Simply download our app, create a profile, and start exploring potential matches!</div>
+        </div>
+    </section>
+
+    <section class="cta container">
+        <h2>get early access today!</h2>
+        <p>be the first to experience our exciting new features and updates</p>
+        <form class="cta-form">
+            <input type="email" placeholder="Enter your email">
+            <button type="submit">Subscribe</button>
+        </form>
     </section>
 
     <footer>
         <div class="container">
-            <div class="footer-grid">
+            <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Logo</h3>
+                    <h3>drawmeet</h3>
                     <ul>
-                        <li>About us</li>
-                        <li>Features</li>
-                        <li>Works</li>
-                        <li>Career</li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Works</a></li>
+                        <li><a href="#">Career</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Help</h3>
                     <ul>
-                        <li>Customer Support</li>
-                        <li>Delivery Details</li>
-                        <li>Terms & Conditions</li>
-                        <li>Privacy Policy</li>
+                        <li><a href="#">Customer Support</a></li>
+                        <li><a href="#">Delivery Details</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Resources</h3>
                     <ul>
-                        <li>Free eBooks</li>
-                        <li>Development Tutorial</li>
-                        <li>How to - Blog</li>
-                        <li>Youtube Playlist</li>
+                        <li><a href="#">Free eBooks</a></li>
+                        <li><a href="#">Development Tutorial</a></li>
+                        <li><a href="#">How to - Blog</a></li>
+                        <li><a href="#">Youtube Playlist</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Subscribe</h3>
-                    <form class="newsletter-form">
+                    <form>
                         <input type="email" placeholder="Enter your email">
-                        <button type="submit" class="button button-primary">Subscribe</button>
+                        <button type="submit">Subscribe</button>
                     </form>
                 </div>
             </div>
@@ -384,5 +201,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
