added privacy policy and terms and conditions

--- a/index.html
+++ b/index.html
@@ -346,30 +346,22 @@
                 <div class="footer-column">
                     <h3>Logo</h3>
                     <ul class="footer-links">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Career</a></li>
+                        <li><a href="terms.html">Terms & Conditions</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="cookie-policy.html">Cookie Policy</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Blog</h3>
                     <ul class="footer-links">
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Tech</a></li>
-                        <li><a href="#">Music</a></li>
-                        <li><a href="#">Video</a></li>
+                        <li><a href="#">How Drawmeet Works</a></li>
+                        <li><a href="#">Connecting With Matches</a></li>
+                        <li><a href="#">Reporting And Appeals</a></li>
+                        <li><a href="#">Read More</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
-                    <h3>Links</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
+                
                 <div class="footer-column">
                     <h3>Subscribe</h3>
                     <p>get updates about the latest updates</p>
@@ -381,11 +373,6 @@
             </div>
             <div class="footer-bottom">
                 <p>© 2024 All rights reserved.</p>
-                <div class="footer-bottom-links">
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Cookie Policy</a>
-                </div>
             </div>
         </div>
     </footer>
