added blog features, hoping it works

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         <li><a href="#">How Drawmeet Works</a></li>
                         <li><a href="#">Connecting With Matches</a></li>
                         <li><a href="#">Reporting And Appeals</a></li>
-                        <li><a href="#">Read More</a></li>
+                        <li><a href="blog/index.html">Read More</a></li>
                     </ul>
                 </div>
                 
