--- a/callback.html
+++ b/callback.html
@@ -8,14 +8,29 @@
     const params = new URLSearchParams(window.location.search);
     const code = params.get('code');
     if (code) {
-      window.opener.postMessage(
-        {
-          type: 'authorization',
-          payload: code,
+      // Exchange code for token
+      fetch('/login/oauth/access_token', {
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json',
         },
-        window.location.origin
-      );
-      window.close();
+        body: JSON.stringify({
+          client_id: 'Ov23lioPeYMQRoCrfWvC',
+          code: code,
+        })
+      })
+      .then(response => response.json())
+      .then(data => {
+        window.opener.postMessage(
+          {
+            type: 'authorization',
+            payload: data.access_token,
+          },
+          window.location.origin
+        );
+        window.close();
+      });
     }
   </script>
 </body>
