--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">drawmeet</a>
+            <a href="#" class="logo"><img src="assets/drawmeet-logo.png" alt="drawmeet logo" class="logo-image"></a>
             <nav class="desktop-nav">
                 <a href="#" class="button button-primary download-button">download now</a>
             </nav>
